; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/storage/extr_initializers.c_usb_stor_huawei_e220_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/storage/extr_initializers.c_usb_stor_huawei_e220_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.us_data = type { i32 }

@USB_REQ_SET_FEATURE = common dso_local global i32 0, align 4
@USB_TYPE_STANDARD = common dso_local global i32 0, align 4
@USB_RECIP_DEVICE = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Huawei mode set result is %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usb_stor_huawei_e220_init(%struct.us_data* %0) #0 {
  %2 = alloca %struct.us_data*, align 8
  %3 = alloca i32, align 4
  store %struct.us_data* %0, %struct.us_data** %2, align 8
  %4 = load %struct.us_data*, %struct.us_data** %2, align 8
  %5 = load %struct.us_data*, %struct.us_data** %2, align 8
  %6 = getelementptr inbounds %struct.us_data, %struct.us_data* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @USB_REQ_SET_FEATURE, align 4
  %9 = load i32, i32* @USB_TYPE_STANDARD, align 4
  %10 = load i32, i32* @USB_RECIP_DEVICE, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @HZ, align 4
  %13 = mul nsw i32 1, %12
  %14 = call i32 @usb_stor_control_msg(%struct.us_data* %4, i32 %7, i32 %8, i32 %11, i32 1, i32 0, i32* null, i32 0, i32 %13)
  store i32 %14, i32* %3, align 4
  %15 = load %struct.us_data*, %struct.us_data** %2, align 8
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @usb_stor_dbg(%struct.us_data* %15, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %16)
  ret i32 0
}

declare dso_local i32 @usb_stor_control_msg(%struct.us_data*, i32, i32, i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @usb_stor_dbg(%struct.us_data*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
